@@ -171,6 +171,11 @@
       \item Entry points \code{rbinom_mu}, \code{rnbinom_mu} and
       \code{rmultinom} are remapped (by default).  This requires
       packages using them to be re-installed.
+      
+      \item The alignment of memory allocated by \code{R_alloc} is now
+      guaranteed to be sufficient for C types \code{double complex} and
+      \code{long double}.  This may mean that packages using
+      \code{USE_R_INTERNALS} need to be re-installed on some platforms.
     }
   }
 
